--- a/index.html
+++ b/index.html
@@ -1,176 +1,35 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="Stylesheet" type="text/css" href="style.css" />
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet"> 
+	<script type="text/javascript">
+	
+		function confirm()
+		{
+			var imie = 		document.getElementById("name").value;
+		document.write(imie);
+		}
+	
+	</script>
 <title>Carrots Course</title>
+<link rel="stylesheet" href="./style.css">
+<script src="./main.js"></script>
 </head>
 <body>
 <style>
 
-.kontener {
- float: center;
-width: 900px;
-height:685px;
-font-family: 'Gloria Hallelujah', cursive;
-background-color:#eeeeee;
-  }
-.karotkowo {
- float: left;
-width: 300px;
-height:685px;
-background-color:#eeeeee;
-  }
-.naglowek {
- float: center;
-width: 900px;
-font-size:40px;
-text-align: center;
-background-color: #999999;
 
-  }
-  .karotka {
-
-margin-left: 10px;
-    float: left;
-    width: 290px;
-height:685px;
-    background-color: #d3efc6;
-  }
-  .opisowo {
-padding-top: 10px;
-    float: left;
-    width: 600px;
-height:685px;
-    background-color: #eeeeee;
- }
-  .footer {
-padding-left: 10px;
-background-color: #999999;
- float: center;
-width: 900px;
-font-size:40px;
-}
-  .footermotivated {
-padding-left: 10px;
-background-color: #999999;
- float: center;
-width: 900px;
-font-size:20px;
- }
-.karotkowa {
-  clip-path: circle(90px at 145px 90px);
-padding-top: 0px;
-background-color: c60005;
-}
-.karotkowa2 {
-background-color:bf7701;
-padding-top: 0px;
-clip-path: circle(85px at 145px 90px);
-}
-.karotkowa img{
-  clip-path: circle(160px at 140px 80px);
-padding-right: 30px;
-    padding-left: 70px;
-width: 250px;
-height:185px;
-float: center;
-}
-.imieinazwisko{
-margin-left: 10px;
-padding-left: 2px;
-background-color: #d3efc6;
-font-size:40px;
-text-align: left;
-}
-.ciemnazielen{
-margin-left: 10px;
-padding-left: 2px;
-background-color: b0d09f;
-font-size:30px;
-text-align: left;
-}.jasnazielen{
-margin-left: 10px;
-margin-right: 0px;
-background-color: #d3efc6;
-font-size:25px;
-text-align: left;
-color: #A16B0B;
-}.star{
-margin-left: 10px;
-margin-right: 0px;
-background-color: #d3efc6;
-text-align: left;
-color: #A16B0B;
-font-size:30px;
-height:30px;
-}
-.jasnyszary{
-margin-left: 10px;
-padding-left: 2px;
-margin-right: 100px;
-background-color: #eeeeee;
-font-size:20px;
-text-align: left;
-}
-.ok{
-margin-left: 10px;
-padding-left: 2px;
-margin-right: 100px;
-background-color: #eeeeee;
-font-size:20px;
-text-align: left;
-}
-.ciemnyszary{
-margin-left: 10px;
-padding-left: 2px;
-margin-right: 100px;
-background-color: #dfdfdf;
-font-size:30px;
-text-align: left;
-}
 
 </style>
 <div class="kontener"> 
-<div class="naglowek">Carrots Course!</div>
-<div class="karotkowo"><div class="karotka"> <div class="karotkowa"> <div class="karotkowa2"><img src="ggc.png"></div></div>
-<div class="imieinazwisko">Paulina</div>
-<div class="imieinazwisko">Lewandowska</div>
-<div class="ciemnazielen"><b>Adres</b></div>
-<div class="jasnazielen">Kolonijna 73,<br>86-031 Osielsko</div>
-<div class="ciemnazielen"><b>Kontakt</b></div>
-<div class="jasnazielen">tel. 667 781 481</div>
-<div class="ciemnazielen"> Data urodzenia</div>
-<div class="jasnazielen">3.10.1988</div>
-<div class="ciemnazielen">Języki</div>
-<div class="jasnazielen">English</div>
-<div class="star">
-<i class="glyphicon glyphicon-star"></i>
-<i class="glyphicon glyphicon-star"></i>
-<i class="glyphicon glyphicon-star-empty"></i>
-<i class="glyphicon glyphicon-star-empty"></i>
-<i class="glyphicon glyphicon-star-empty"></i>    </div></div></div>
-<div class="opisowo">
-<div class="ciemnyszary">OBJECTIVE</div>
-<div class="jasnyszary">Be a good programmer</div>
-<div class="ciemnyszary">Education</div>
-<div class="jasnyszary">Nicolaus Copernicus University
-Management (marketing, information technologies);<br>
-Gawid 2 (course: web design, animation, computer graphic design)
+<div class="start">Spróbuj szczęścia!</div>
+<div class="whostart">Podaj swoje imię:
+ <div class="name">
+<input type="text" id="name" />
+	<input type="submit" value="Spróbuj szczęścia!" onclick="confirm()"/>
 </div>
-<div class="ciemnyszary">Skills</div>
-<div class="jasnyszary">I hope it will open my way to mobile applications</div>
-<div class="ciemnyszary">Hobbies</div>
-<div class="jasnyszary">Reading books<br>
-Urban Exploring<br>Gardening<br>Handmade<br>Cooking</div>
-<div class="ciemnyszary">Personality</div>
-<div class="ok"><i class="glyphicon glyphicon-ok"></i>Open</div>
-<div class="ok"><i class="glyphicon glyphicon-ok"></i>Optimistic</div>
-<div class="ok"><i class="glyphicon glyphicon-ok"></i>Enthusiastic</div>
-<div class="ok"><i class="glyphicon glyphicon-ok"></i>Ambitious</div>
-</div>
-<div class="footer">Letter of motivation</div>
-<div class="footermotivated">Hi! I hope you will deside to qualify me at the course ;). As a young girl i saw film "Hackers" with Angelina Jolie. Ofcourse my dream was automaticly "to be a hacker at the future". As a young girl i had many dreams. I wanted to be a policewoman, doctor, layer, also catwoman. I didn't made this dreams trugh. But few years ago, while i was at the university, i realised that i want something more than diploma from school. I realised that nowadays marketing is geting more and more related with technology information. So i decided to expand my skills in that area. I started second module at my studies and finish course Gawind 2. It was great decision. Now I am using this knowledge at work. But i have some insufficiency. I need more skills for my job and for myself.  At least, although I am not a catwoman there is a posibility (in some way) to make my children dream come trugh.</div>
+<div class="rules">
+Jak sądzisz, czy szczęście sprzyja Tobie bardziej, niż komputerowi? Po co się domyślać. Po prostu spróbuj szczęścia! Zasady są proste. Gra trwa 5 rund. Rzucasz kośćmi na przemian z komputerem, przewidując wynik rywala. Prawidłowa odpowiedź pozwala uzyskać punkt. W wypadku błędnej odpowiedzi, punkt trafia do przeciwnika.</div>
 </div>
 </html>
